--- a/TechTalker/funcionalidade.html
+++ b/TechTalker/funcionalidade.html
@@ -46,13 +46,16 @@
                 <div class="col-lg-8">
                     <h2>Como funciona</h2>
                     <p class="lead">
+                        &nbsp &nbsp &nbsp 
                         O TechTalker visa ajudar as pessoas acometidas de <a href="https://www.tuasaude.com/afasia-de-broca/" target="_blank">Afasia de Broca</a> a se comunicar,
-						utilizando a interface gráfica desenvolvida por nós da TechTalker. Está interface
-						de fácil uso e adapitativa para o uso de cada usuário, sendo assim a alternativa ideal
+						utilizando a interface gráfica desenvolvida por nós da TechTalker.<br>
+                        &nbsp &nbsp &nbsp 
+                        Está interface de fácil uso e adapitativa para o uso de cada usuário, sendo assim a alternativa ideal
 						para o paciente com a condição voltar a se comunicar com facilidade e comodidade.
                     </p>
                     <h2>Usabilidade</h2>
 					<p class="lead">
+                        &nbsp &nbsp &nbsp 
                         O portador de Afasia de Broca, consegue raciocinar mas não consegue
 						se expressar com palavras, nesta hora que o TechTalker ajuda-lo, 
                         com o nosso software ele podera atraves de uma interface gráfica
@@ -70,7 +73,9 @@
     <footer class="py-5 bg-dark">
         <div class="container px-4">
             <p class="m-0 text-center text-white">
-                Copyright &copy; Gustavo e Gabrielly 2022
+                Copyright &copy; Gustavo e Gabrielly 2022<br>
+                 <a href="#">
+                  Voltar para o topo </a>
             </p>
         </div>
     </footer>
