--- a/TechTalker/index.html
+++ b/TechTalker/index.html
@@ -15,7 +15,7 @@
 
 <body id="page-top">
     <!-- Navigation-->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top " id="mainNav">
         <div class="container px-4">
 			<a href="#page-top" />
             <img src="assets/tticon3.png" width="40" height="40" class="icon" alt="TechTalker">
@@ -27,13 +27,13 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Sobre</a>
+                        <a class="nav-link text-white" href="index.html">Sobre</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="funcionalidade.html">Funcionalidade</a>
+                        <a class="nav-link text-white" href="funcionalidade.html">Funcionalidade</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contato.html">Contato</a>
+                        <a class="nav-link text-white" href="contato.html">Contato</a>
                     </li>
                 </ul>
             </div>
@@ -56,9 +56,10 @@
                 <div class="col-lg-8">
                     <h2>Sobre o TechTalker</h2>
                     <p class="lead">
+                        &nbsp &nbsp &nbsp 
                         O TechTalker foi desenvolvido com o intuito de ajudar os portadores de Afasia,
-                        condição está que impossibilita a comunicação verbal. Existem três tipos de 
-                        Afasia, a que pretendemos ajudar com o aplicativo é a Afasia de Broca que 
+                        condição está que impossibilita a comunicação verbal.<br> &nbsp &nbsp &nbsp 
+                        Existem três tipos de Afasia, a que pretendemos ajudar com o aplicativo é a Afasia de Broca que 
                         impossibilita o portador a se comunicar verbalmente porém ele continua 
                         raciocinando.
                     </p>
@@ -69,7 +70,7 @@
                 <div class="col-lg-7"><img class="img-fluid rounded mb-4 mb-lg-0" src="assets/veio.jpg" alt="..." /></div>
                 <div class="col-lg-5">
                     <h1 class="font-weight-light">Organizando as palavras</h1>
-                    <p>A Afasia de Broca faz com que seus portadores não consigam
+                    <p> &nbsp &nbsp &nbspA Afasia de Broca faz com que seus portadores não consigam
                        repassar seus pensamentos com palavras, eles não perdem a 
                         capacidade de pensar mas sim de fala, o que pode ser solucionado
                         utilizando o nosso software.
@@ -81,14 +82,11 @@
                     <div class="col-lg-5">
                         <h1 class="font-weight-light">Software</h1>
                         <p>
-                            O software pode ser adquirio e instalado em diversos modelos de smartphones e tablets.
+                             &nbsp &nbsp &nbsp O software pode ser adquirio e instalado em diversos modelos de smartphones e tablets.
                     </p>
                 </div>
             </div>
-                        <li>
-                            Minimal custom CSS so you are free to explore your own unique
-                            design options
-                        </li>
+ 
                     </ul>
                 </div>
             </div>
@@ -102,7 +100,7 @@
                 Copyright &copy; Gustavo e Gabrielly 2022
                 <br>
                 <a href="#">
-                  <img src="assets/arrow.png" width="30" weight="30" class="icon" alt="Top">Voltar para o topo </a>
+                  Voltar para o topo </a>
       
               </p>
         </div>
